--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music Is Fun!</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -18,9 +18,16 @@
             <button type="submit" class="btn btn-primary" id="get-music-button">Get Music</button>
         </div>
     </form>
-    <div id="songs">
 
+    <div class="container-fluid">
+        <!-- <div class="jumbotron"> -->
+            <div class="row">
+                <div id="songs">
+                </div>
+            </div>
+        <!-- </div> -->
     </div>
+
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="itunes-service.js"></script>
     <script src="itunes-controller.js"></script>
